fix: migrate dashboard to use "type" instead of "referenceType" field BREAKING CHANGE: The query parameter is now 'type' instead of 'reference_type' https://gravitee.atlassian.net/browse/APIM-4266
(cherry picked from commit f718201c9e5297ea6462f133a8a4c5199ac6e675)
(cherry picked from commit 5d6efb5be45bdd16922c6ebba657bc07e2b0a57e)
(cherry picked from commit b9104274569087bfdc507e84bcb46ac05137010d)